--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ sqlparse==0.4.1
 static3==0.7.0
 whitenoise==5.2.0
 django-heroku==0.3.1
+psycopg2==2.8.6
+pytz==2020.4
+requests==2.25.1
+sqlparse==0.4.1
+virtualenv==20.2.1
+zipp==3.4.0
